--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -16,7 +17,13 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.13",
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.2"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "vite": "^5.4.2",
+    "rimraf": "^5.0.5"
   }
 }
