--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "vite": "^5.4.2",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "tailwindcss": "^3.4.10",
+    "vite": "^5.4.2"
   }
 }
