--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
+#   .env.example 파일:
+#   - 프로젝트에 필요한 환경변수 목록을 문서화
+#   - 다른 개발자가 프로젝트 설정 시 참고용
+#   - Git에 커밋되어 공유되는 템플릿 (실제 .env는 gitignore) 
+
 # 빈 값이면 weatherService 가 목업 데이터를 사용합니다.
 VITE_OPEN_WEATHER_KEY=
